[package]
name = "jonashietala_se"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
incremental = true

[dependencies]
atom_syndication = "0.11.0"
axum = "0.5.5"
camino = "1.0.7"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
eyre = "0.6.8"
fs_extra = "1.2.0"
futures = "0.3.21"
glob = "0.3.0"
grass = "0.11.0"
hotwatch = "0.4.6"
html-escape = "0.2.11"
itertools = "0.10.3"
lazy_static = "1.4.0"
md5 = "0.7.0"
new_mime_guess = "4.0.1"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
rayon = "1.5.3"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
rust-s3 = "0.32.3"
scraper = "0.13.0"
serde = "1.0"
serde_yaml = "0.8"
syntect = { version = "5.0.0", default-features = false, features = ["html", "regex-onig", "default-syntaxes", "yaml-load", "plist-load"] }
tempfile = "3.3.0"
tera = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"
walkdir = "2"
yaml-front-matter = "0.1.0"
jh-itemref-derive = { path = "src/jh-itemref-derive" }
jh-content = { path = "src/jh-content" }
jh-markdown = { path = "src/jh-markdown" }
jh-paths = { path = "src/jh-paths" }
jh-site = { path = "src/jh-site" }
jh-tests = { path = "src/jh-tests" }
jh-upload = { path = "src/jh-upload" }
jh-feed = { path = "src/jh-feed" }
jh-item = { path = "src/jh-item" }
jh-gen = { path = "src/jh-gen" }
